--- a/style.css
+++ b/style.css
@@ -272,15 +272,18 @@ input {
 }
 
 .hud-icon--gear {
-  width: 40px;
-  height: 40px;
-  border-radius: 10px;
+  width: auto;
+  height: auto;
+  align-self: stretch;
+  aspect-ratio: 1 / 1;
+  border-radius: 12px;
 }
 
 .hud-icon--gear::before {
   content: "";
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
+  display: block;
   background-image: url("assets/exit.png");
   background-size: contain;
   background-repeat: no-repeat;
